--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_signin_button:
   firebase_core:
+  firebase_auth:
+  google_sign_in:
+  flutter_facebook_auth: ^6.1.1
 
 dev_dependencies:
   flutter_test:
