--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth:
   google_sign_in:
   flutter_facebook_auth: ^6.1.1
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
