--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in:
   flutter_facebook_auth: ^6.1.1
   sqflite: ^2.3.2
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
