--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_facebook_auth: ^6.1.1
   sqflite: ^2.3.2
   intl_phone_field: ^3.2.0
+  image_picker:
 
 dev_dependencies:
   flutter_test:
